--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,12 +17,7 @@ builds:
       - windows
       - darwin
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  - name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     format: binary # don't use archive format, just binary
 checksum:
   name_template: 'checksums.txt'
