--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,6 +3,7 @@
 before:
   hooks:
     # You may remove this if you don't use go modules.
+    - make mock
     - go mod tidy
     # you may remove this if you don't need go generate
     - go generate ./...
