--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           go-version: '>=1.20'
           cache: true
+      - name: install mockery
+        run: go install github.com/vektra/mockery/v2@v2.32.0
       - uses: goreleaser/goreleaser-action@v4
         with:
           # either 'goreleaser' (default) or 'goreleaser-pro':
