--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,11 +23,11 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 changelog:
-  sort: asc
+  use: github
   filters:
     exclude:
-      - '^docs:'
       - '^test:'
+      - '^Merge pull request'
 release:
   extra_files:
     - glob: "README.md"
