--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,12 +1,11 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
+project_name: cli
+
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - make mock
     - go mod tidy
-    # you may remove this if you don't need go generate
     - go generate ./...
+
 builds:
   - id: "zeabur"
     main: ./cmd
@@ -17,17 +16,29 @@ builds:
       - linux
       - windows
       - darwin
+
 archives:
   - name_template: "zeabur_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    format: binary # don't use archive format, just binary
+    format: binary
+
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
+
 changelog:
   use: github
   filters:
     exclude:
-      - '^test:'
-      - '^Merge pull request'
+      - "^test:"
+      - "^Merge pull request"
+
 release:
   extra_files:
     - glob: "README.md"
+
+brews:
+  -
+    repository:
+      owner: zeabur
+      name: homebrew-tap
+    homepage: "https://zeabur.com"
+    description: "Zeabur's official command line tool"
