--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -20,6 +20,10 @@ builds:
 archives:
   - name_template: "zeabur_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     format: binary
+    id: "binary"
+  - name_template: "zeabur_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    format: zip
+    id: "zip"
 
 checksum:
   name_template: "checksums.txt"
@@ -36,13 +40,15 @@ release:
     - glob: "README.md"
 
 brews:
-  - repository:
+  - ids: ["zip"]
+    repository:
       owner: zeabur
       name: homebrew-tap
     homepage: "https://zeabur.com"
     description: "Zeabur's official command line tool"
 
-scoop:
+scoops:
+- ids: ["zip"]
   url_template: "https://github.com/zeabur/cli/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
   bucket:
     owner: zeabur
