--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,5 +16,6 @@ linters-settings:
   govet:
     check-shadowing: true
     enable-all: true
+    disable: ["fieldalignment"]
   errcheck:
     exclude-functions:
