--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,8 +14,7 @@ linters:
 
 linters-settings:
   govet:
-    check-shadowing: true
-    enable-all: true
+    check-shadowing: false
     disable: ["fieldalignment"]
   errcheck:
     exclude-functions:
