--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: actions/setup-go@v4
         with:
-          go-version: ">=1.20"
+          go-version: "1.20"
           cache: true
 
       - name: install mockery
