--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,8 +29,11 @@ jobs:
       - name: generate mocks
         run: make mock
 
+      - name: download dependencies
+        run: go mod download
+
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.53
+          version: v1.59
           only-new-issues: true
